@@ -68,7 +68,7 @@ stopword = perlfunc
 
 [RunExtraTests]
 
-[Prereqs / BuildRequires]
+[Prereqs / ConfigureRequires]
 Alien::GHTTP                = 0.003
 
 [Prereqs]
@@ -81,6 +81,7 @@ XSLoader                    = 0
 IO::Handle                  = 0
 
 [Prereqs / TestRequires]
+Alien::GHTTP    = 0.003
 Test::More      = 0.88
 
 [Prereqs / DevelopRequires]
